--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -1,3 +1,3 @@
-spring.datasource.url = jdbc:mysql://localhost:3307/estatebasic
+spring.datasource.url = jdbc:mysql://localhost:3307/javaese
 spring.datasource.username = root
 spring.datasource.password = admin123
